{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 94,
  "lineage": "9ddd136d-c174-3277-f070-ddf02e8797f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:737405317170:instance/i-0ec33348b943a86dc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec33348b943a86dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b0d331ab11b2700",
            "private_dns": "ip-10-0-1-143.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-35-178-196-127.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.196.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7aeaf5e438e2089",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05c94b89a888a43ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f30ef40706d87e7",
            "tags": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c94b89a888a43ea"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:737405317170:instance/i-0cd29400a650e887d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd29400a650e887d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5b33b40a559c415",
            "private_dns": "ip-10-0-2-91.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-35-178-166-134.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.166.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056522e97aaf19c5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05c94b89a888a43ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeed89f8c6e0df7f",
            "tags": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c94b89a888a43ea"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Altschool3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:737405317170:instance/i-03ca8fb2db1daead5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ca8fb2db1daead5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07163777fc33d98f9",
            "private_dns": "ip-10-0-1-194.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-52-56-116-188.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.116.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0294ceea4f4f12d04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05c94b89a888a43ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f30ef40706d87e7",
            "tags": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "Altschool-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c94b89a888a43ea"
            ]
          },
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Altschool_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:internet-gateway/igw-0bc761e30dbd96e13",
            "id": "igw-0bc761e30dbd96e13",
            "owner_id": "737405317170",
            "tags": {
              "Name": "Altschool_internet_gateway"
            },
            "tags_all": {
              "Name": "Altschool_internet_gateway"
            },
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "dependencies": [
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Altschool-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:loadbalancer/app/Altschool-load-balancer/24548442575ca669",
            "arn_suffix": "app/Altschool-load-balancer/24548442575ca669",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Altschool-load-balancer-618301265.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:loadbalancer/app/Altschool-load-balancer/24548442575ca669",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Altschool-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0506c350359f35ee1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f30ef40706d87e7"
              },
              {
                "subnet_id": "subnet-0eeed89f8c6e0df7f"
              }
            ],
            "subnets": [
              "subnet-08f30ef40706d87e7",
              "subnet-0eeed89f8c6e0df7f"
            ],
            "vpc_id": "vpc-0e849679c0622afbb",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Altschool-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:listener/app/Altschool-load-balancer/24548442575ca669/6d5c9ba9dec08254",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:listener/app/Altschool-load-balancer/24548442575ca669/6d5c9ba9dec08254",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:loadbalancer/app/Altschool-load-balancer/24548442575ca669",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.Altschool-load-balancer",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "Altschool-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:listener-rule/app/Altschool-load-balancer/24548442575ca669/6d5c9ba9dec08254/c3a151ded83640ba",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:listener-rule/app/Altschool-load-balancer/24548442575ca669/6d5c9ba9dec08254/c3a151ded83640ba",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:listener/app/Altschool-load-balancer/24548442575ca669/6d5c9ba9dec08254",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_instance.Altschool2",
            "aws_instance.Altschool3",
            "aws_lb.Altschool-load-balancer",
            "aws_lb_listener.Altschool-listener",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Altschool-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "arn_suffix": "targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Altschool-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "dependencies": [
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90-20230205224244850800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "target_id": "i-0ec33348b943a86dc"
          },
          "dependencies": [
            "aws_instance.Altschool1",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90-20230205224234719500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "target_id": "i-0cd29400a650e887d"
          },
          "dependencies": [
            "aws_instance.Altschool2",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90-20230205224245771800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:737405317170:targetgroup/Altschool-target-group/8fb2ddbdddd68f90",
            "target_id": "i-03ca8fb2db1daead5"
          },
          "dependencies": [
            "aws_instance.Altschool3",
            "aws_lb_target_group.Altschool-target-group",
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_security_group.Altschool-security-grp-rule",
            "aws_subnet.Altschool-public-subnet1",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Altschool-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:network-acl/acl-0e7421fa02e0fe571",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e7421fa02e0fe571",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "737405317170",
            "subnet_ids": [
              "subnet-08f30ef40706d87e7",
              "subnet-0eeed89f8c6e0df7f"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Altschool-public-subnet1",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Altschool-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:route-table/rtb-04d9fdf6f952dafb8",
            "id": "rtb-04d9fdf6f952dafb8",
            "owner_id": "737405317170",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc761e30dbd96e13",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Altschool-route-table-public"
            },
            "tags_all": {
              "Name": "Altschool-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gateway",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e0374017cb505a",
            "route_table_id": "rtb-04d9fdf6f952dafb8",
            "subnet_id": "subnet-08f30ef40706d87e7"
          },
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gateway",
            "aws_route_table.Altschool-route-table-public",
            "aws_subnet.Altschool-public-subnet1",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033faa006a2ea5e0f",
            "route_table_id": "rtb-04d9fdf6f952dafb8",
            "subnet_id": "subnet-0eeed89f8c6e0df7f"
          },
          "dependencies": [
            "aws_internet_gateway.Altschool_internet_gateway",
            "aws_route_table.Altschool-route-table-public",
            "aws_subnet.Altschool-public-subnet2",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Altschool-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:security-group/sg-0506c350359f35ee1",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0506c350359f35ee1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Altschool-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "737405317170",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Altschool-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:security-group/sg-05c94b89a888a43ea",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c94b89a888a43ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0506c350359f35ee1"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0506c350359f35ee1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "737405317170",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Altschool-security-grp-rule"
            },
            "tags_all": {
              "Name": "Altschool-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Altschool-load_balancer_sg",
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Altschool-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:subnet/subnet-08f30ef40706d87e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f30ef40706d87e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737405317170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Altschool-public-subnet1"
            },
            "tags_all": {
              "Name": "Altschool-public-subnet1"
            },
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "dependencies": [
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Altschool-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:subnet/subnet-0eeed89f8c6e0df7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeed89f8c6e0df7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737405317170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Altschool-public-subnet2"
            },
            "tags_all": {
              "Name": "Altschool-public-subnet2"
            },
            "vpc_id": "vpc-0e849679c0622afbb"
          },
          "dependencies": [
            "aws_vpc.Altschool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Altschool_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:737405317170:vpc/vpc-0e849679c0622afbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-016b9a255656172a6",
            "default_route_table_id": "rtb-02df956dea61d411c",
            "default_security_group_id": "sg-02ab711cc96b8b0d7",
            "dhcp_options_id": "dopt-0d8442fec61024660",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e849679c0622afbb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02df956dea61d411c",
            "owner_id": "737405317170",
            "tags": {
              "Name": "Altschool_vpc"
            },
            "tags_all": {
              "Name": "Altschool_vpc"
            }
          }
        }
      ]
    }
  ]
}